--- a/styles.css
+++ b/styles.css
@@ -98,22 +98,22 @@ img {
 /*****************************
 * Dot customizations go here
 ******************************/
-.dot.orange {
-    background-color: rgba(255, 133, 25, 0.65);
+.dot.pink {
+    background-color: rgba(255, 51, 159, 0.65);
 }
 
 .dot.blue {
     background-color: rgba(0, 93, 255, 0.65);
 }
 
-.dot.green {
-    background-color: rgba(12, 232, 196, 0.65);
+.dot.purple {
+    background-color: rgba(156, 51, 255, 0.65);
 }
 
-.dot.wheels {
-    left: 58%;
-    bottom: 20%;
-    transform: translate(-58%, 20%);
+.dot.paper {
+    left: 48%;
+    bottom: 40%;
+    transform: translate(-48%, 40%);
 }
 
 .dot.camera {
@@ -122,7 +122,7 @@ img {
     transform: translate(-39%, -15%);
 }
 
-.dot.solar {
+.dot.flag {
     top: 55%;
     left: 26%;
     transform: translate(-26%, -55%);
