--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,11 @@ img {
 }
 
 .dot.blue {
-    background-color: rgba(0, 93, 255, 0.65);
+    background-color: rgba(15, 122, 162, 0.65);
+}
+
+.dot.green {
+    background-color: rgba(48, 138, 19, 0.65);
 }
 
 .dot.purple {
@@ -116,10 +120,16 @@ img {
     transform: translate(-48%, 40%);
 }
 
-.dot.camera {
-    top: 15%;
-    left: 39%;
-    transform: translate(-39%, -15%);
+.dot.crowd {
+    top: 30%;
+    left: 15%;
+    transform: translate(-15%, -30%);
+}
+
+.dot.face {
+    top: 16%;
+    left: 45%;
+    transform: translate(-45%, -16%);
 }
 
 .dot.flag {
